# chrome-takeout-to-firefox

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix
src/: hash.rs  main.rs
